# sysadmin_mcp_kit

./: .gitignore  README.md  main.py  pyproject.toml
config/: server.example.toml
docs/: disk_full_incident_cleanup_ubuntu_24_04_noble_langfuse_docker_click_house_snap.md  docker_boot_issue_clean_summary.md  docker_daemon_dependency_failure_troubleshooting_log.md  min_io_on_ubuntu_with_docker_nginx_console_on_443_8443_s_3_api_local_presigned_public_urls.md  nginx_recovery_and_agents_vhost_cleanup.md  process_kill_script_debug_summary.md  server_firewall_nginx_langfuse_session_summary.md  ssh_access_setup_summary.md  swearing_bot_python_version_management_pyenv_vs_uv.md
prompts/: admin_adviser.prompt.py
src/sysadmin_mcp_kit/: __init__.py  __main__.py  auth.py  cli.py  config.py  mcp_client_cli.py  pagination.py  policy.py  redaction.py  result_store.py  server.py  session.py  ssh.py
tests/: conftest.py  test_auth.py  test_cli.py  test_config.py  test_integration.py  test_mcp_client_cli.py  test_policy.py  test_redaction.py  test_result_store.py  test_ssh.py
